Solved overflow isuue

--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,8 @@ h2 {
   border: 4px solid rgb(241 242 234);
   padding: 1rem;
   border-radius: 20px;
+  height: 350px;
+  overflow-y: scroll;
 }
 
 .first-container ul li {
